# a2a

./: .gitignore  check_running.cmd  pyproject.toml  readme.cdr  readmeai.txt  requirements.txt
basic_101_a2a/: Readme.md  agent_executor.py  client_agent.cmd  client_agent.py  client_factory_example.py  dependencies.py  planner_agent.cmd  planner_agent.py  research_agent.cmd  research_agent.py
langchain1.0_basic/: LANGCHAIN_BEST_PRACTICES.md  README.md  RUNNING_EXAMPLES.md  pyproject.toml
langchain1.0_basic/agents/: langchain_planner_agent.py  langchain_research_agent.py
langchain1.0_basic/async_examples/: README.md  SUMMARY.md  async_planner_agent.py  async_research_agent.py  concurrent_agents_demo.py  performance_comparison.py  quick_start.py
langchain1.0_basic/examples/: 01_basic_ollama.py  02_tools_structured.py  03_mcp_integration.py
langchain1.0_basic/utils/: __init__.py  a2a_utils.py  mcp_tools.py
mcp_a2a_simple/: agent_executor.py  client_agent_mcp.cmd  client_agent_mcp.py  mcp_utils.py  planner_agent.cmd  planner_agent_mcp.py  research_agent.cmd  research_agent_mcp.py
